[gd_scene load_steps=2 format=3 uid="uid://cx8s4iaox16a2"]

[ext_resource type="Script" uid="uid://uski11ldy8ka" path="res://actor_builders/parts_ui/part_menu_item.gd" id="1_hhkp4"]

[node name="PartMenuItem" type="ColorRect"]
custom_minimum_size = Vector2(130, 120)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.133333, 0.133333, 0.133333, 1)
script = ExtResource("1_hhkp4")

[node name="Texture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1
autowrap_mode = 2

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
